--- a/donate/index.html
+++ b/donate/index.html
@@ -40,7 +40,7 @@
 			<h3>Project Coco Support Pets through Basic Needs</h3>
 			<p>Not everyone has the knowledge and means to provide a safe and happy home for their pet. With Project Coco, we reach out to neighborhoods and households in need and provide basic materials and education to promote responsible animal care. You can help this effort through both monetary and material donations.</p>
 
-			<p class="action"><a href="">Donate to Project Coco</a></p>
+			<p class="action"><a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&amp;SESSION=rNa2Dbsi5X90oa5MzsQHFp0JAhdMgwP1eY6lHMm-kxPLwerFfRu3YszWi9K&amp;dispatch=5885d80a13c0db1f8e263663d3faee8def8934b92a630e40b7fef61ab7e9fe63">Donate to Project Coco</a></p>
 		</section>
 
 		<section class="featured program">
